Bug 1539535 - Add a (temporary) null check in RemoteWorkerChild::CloseWorkerOnMainThread r=asuth a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D26794